--- a/tagreader.yaml
+++ b/tagreader.yaml
@@ -397,13 +397,13 @@ rtttl:
   output: buzzer
 
 # Configure LED
+output:
+  - platform: gpio
+    pin: D8
+    id: activity_led_output
+
 light:
-- platform: neopixelbus
-  variant: WS2812
-  pin: D8
-  num_leds: 1
-  flash_transition_length: 500ms
-  type: GRB
-  id: activity_led
-  name: "${friendly_name} LED"
-  restore_mode: ALWAYS_OFF
+  - platform: binary
+    name: "${friendly_name} LED"
+    id: activity_led
+    output: activity_led_output
